<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_green"
    android:orientation="vertical"
    tools:context=".controller.LoginFragment">


    <TextView
        android:id="@+id/tv_log_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/eggplant_light"
        android:gravity="center"
        android:padding="@dimen/_20dp"
        android:text="@string/mi_recuerda_farmaco_titulo"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp" />

    <ImageView
        android:id="@+id/iv_medicines"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:src="@drawable/imageonline_co_transparentimage"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/login_image" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/et_log_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_shape"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/_8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:maxLength="40"
        android:padding="@dimen/_16dp"
        android:textAlignment="viewStart"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_16dp" />

    <EditText
        android:id="@+id/et_log_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:autofillHints="password"
        android:background="@drawable/input_shape"
        android:cursorVisible="true"
        android:drawableStart="@drawable/ic_baseline_https_24"
        android:drawablePadding="@dimen/_8dp"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:maxLength="20"
        android:padding="@dimen/_16dp"
        android:textAlignment="viewStart"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_log_access"
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:maxLines="1"
            android:text="@string/acceso"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="@dimen/_40dp"/>


        <Button
            android:id="@+id/btn_log_register"
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:maxLines="1"
            android:text="@string/registro"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_8dp" />


    <Button
        android:id="@+id/btn_log_logout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:text="@string/cerrar_sesion"
        android:textSize="18sp" />

</LinearLayout>
