<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bittersweet"
        tools:context=".controller.MyPharmaHomeFragment">


        <TextView
            android:id="@+id/tv_myhome_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/eggplant_light"
            android:gravity="center"
            android:padding="@dimen/_20dp"
            android:text="@string/mis_farmacos_titulo"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="410dp"
            android:layout_height="311dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_myhome_title">

            <ImageView
                android:id="@+id/iv_myhome_blister"
                android:layout_width="206dp"
                android:layout_height="200dp"
                android:layout_marginTop="76dp"
                android:contentDescription="@string/blister_image"
                android:src="@drawable/yellow_aspirine"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/iv_myhome_books"
                android:layout_width="186dp"
                android:layout_height="200dp"
                android:layout_marginTop="76dp"
                android:contentDescription="@string/books_and_magnifying_glass"
                android:src="@drawable/books_magnifying_glass"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space"
            android:padding="@dimen/_20dp">

            <Button
                android:id="@+id/btn_myhome_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introducir_nuevo_farmaco"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_16dp" />

            <Button
                android:id="@+id/btn_myhome_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mostrar_mi_lista_de_farmacos"
                android:textColorHint="@color/white"
                android:textSize="20sp" />




        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>